Fixed Uneven Images Bug

--- a/Section-8/Web-Food/styles.css
+++ b/Section-8/Web-Food/styles.css
@@ -50,10 +50,11 @@ body {
 
 main ul {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 1fr 1fr;
   width: 80%;
   margin: auto;
   justify-content: center;
+  text-align: center;
 }
 
 .item-content {
@@ -62,8 +63,8 @@ main ul {
   overflow: hidden;
   text-align: center;
   margin: .8rem 1.4rem;
-  width: 90%;
-  height: 100%;  
+  width: 80%;
+  height: 100%;
 }
 
 .item-content img {
@@ -93,18 +94,26 @@ main ul {
   background: linear-gradient(45deg, rgb(209, 136, 1), rgb(182, 0, 0));
 }
 
-@media (max-width: 768px) {
+@media (max-width: 48em) {
   main ul {
     grid-template-columns: auto;
   }
 
+  header h1{
+    font-size: 1.5em;
+  }
+
+  nav {
+    display: none;
+  }
+
   .item-content{
     width: 90%;
-    height: 20rem;
+    height: 90%;
   }
 }
-@media (min-width: 1000px) {
-  main ul {
-    width: 70%;
+@media (min-width: 64em) {
+  .item-content {
+    width: 90%;
   }
 }
